libmeegotouch (0.20.36~1) unstable; urgency=low

  * [unreleased]

 -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Wed, 25 Aug 2010 11:51:23 +0300

libmeegotouch (0.20.35-1) unstable; urgency=low

  * Fixes: NB#177305 Left over characters are not right shifting on erasing the characters of input text field
  * Fixes: NB#184903 - Application menu button flickers when pressed in ...
  * Fixes: NB#183163 Crash due to setParent in MDialogModel
  * Fixes: NB#183463 -  Spinner in WidgetsGallery doesn't work until device orientation changed
  * Fixes: NB#184825 - MList documentated behaviour is different from the code really does (MList deletes cell creator)
  * Fixes: NB#183211, MLocalePrivate::loadCountryCodes / isValidCountryCode is inefficient
  * Fixes: NB#181963 -  plainQt Checkbox with red quadrat (missing image) on test application
  * Fixes: NB#185535 - MAdvancedListItem setImageWidget() is causing a crash
  * Fixes: NB#185689 - Hide all (or alt. empty) list headers when doing live-search.
  * Fixes: NB#174405 - Password field data gets visible using hardware keyboard.
  * Fixes: NB#184502, MLocale must not spin the main loop
  * Fixes: NB#185693 - Very long word in MBubbleItem message is not wrapped correctly
  * Fixes: NB#183185 - Broken links in public API doc
  * Fixes: NB#182160  -  Activity in non-visible/background applications when there are notifications on screen
  * Fixes: NB#180677 - Delete MLocale etc when MApplication is deleted
  * Fixes: NB#182223  -  Screen orientation changes when sliding physical keyboard open - close
  * Fixes: NB#183344 -  System dialog has wrong label in switcher
  * Fixes: NB#185045 - setItemStyle() is not working for MDetailedListItem
  * Fixes: NB#185277 MLinearLayoutPolicyPrivate::notifyAllWidgetsOfLayoutPosition() only takes in consideration one policy for a button group
  * Fixes: NB#176987, Text is not wrapped or scrollable in Notes and Calendar
  * Fixes: NB#151917 - MTextEdit is not relocated correctly